# gauntlet

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.venv312/: pyvenv.cfg
src/gauntlet/: __init__.py  __main__.py  api.py  client.py  config.py  models.py  orchestrator.py  parsing.py  tools.py  trace.py  translation.py  validation.py
src/gauntlet/agents/: auditor.py  base.py  classifier.py  constructor.py  critique.py  evaluator.py  resolver.py
tests/: conftest.py  test_api.py  test_client.py  test_models.py  test_orchestrator.py  test_parsing.py  test_tools.py  test_trace.py  test_translation.py  test_validation.py
